# PhotoBooth

./: CMakeLists.txt  Main.qml  main.cpp
ui/CameraCaptureButton/: CameraCaptureButton.qml
ui/CameraPreviewCanva/: CameraPreviewCanva.qml
ui/CameraPrintButton/: CameraPrintButton.qml
ui/GenImgOneCanva/: GenImgOneCanva.qml
ui/GenImgTwoCanva/: GenImgTwoCanva.qml
ui/GoBackButton/: GoBackButton.qml
ui/HomeButton/: HomeButton.qml
ui/ImagePreviewCanva/: ImagePreviewCanva.qml
ui/LeftSidePanel/: LeftSidePanel.qml
ui/QrCanva/: QrCanva.qml
ui/mainScreen/: MainScreen.qml
ui/photoPreviewScreen/: PhotoPreviewScreen.qml
ui/startButton/: StartButton.qml
ui/wcScreen/: wcScreen.qml
